<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RatingActivity"
    android:background="@color/blue50">

    <TextView android:text="@string/rate_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue800"
        android:textSize="80sp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/message"
        android:textStyle="bold"

        android:layout_marginTop="120dp"
        android:typeface="serif" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:backgroundTint="@color/blue200"
        android:background="@color/blue700"
        android:numStars="5"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/message"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:layout_alignRight="@+id/message"

        android:backgroundTint="@color/blue200"
        android:numStars="5"
        android:background="@color/blue700"
        android:layout_below="@+id/ratingBar"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar3"
        android:backgroundTint="@color/blue200"
        android:background="@color/blue700"
        android:numStars="5"
        android:layout_below="@+id/ratingBar2"
        android:layout_alignRight="@+id/message"

        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/rating_submit"
        android:onClick="Submit"
        android:textColor="@color/blue800"
        android:textStyle="bold"
        android:typeface="serif"
        android:background="@color/blue100"

        android:textSize="60sp"
        android:layout_below="@+id/ratingBar3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall"
        android:id="@+id/textView"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/blue800"
        android:textSize="33dp"
        android:layout_alignLeft="@+id/message"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_toStartOf="@+id/ratingBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scary"
        android:id="@+id/textView2"
        android:textColor="@color/blue800"
        android:textSize="33dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textIsSelectable="true"
        android:layout_alignLeft="@+id/message"

        android:layout_alignBottom="@+id/ratingBar2"
        android:layout_toStartOf="@+id/ratingBar2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exciting"
        android:id="@+id/textView3"
        android:textColor="@color/blue800"
        android:textSize="33dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textIsSelectable="false"
        android:layout_alignLeft="@+id/message"
        android:layout_alignBottom="@+id/ratingBar3"
        android:layout_toStartOf="@+id/ratingBar3" />

</RelativeLayout>
