<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blue50"
    tools:context="com.github.teamasia.heartrider.MedicalActivity">

    <TextView android:text="@string/medical_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue900"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:id="@+id/personal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/gender"
        android:layout_gravity="center"
        android:typeface="serif"
        android:layout_below="@+id/personal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/radioButton"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/gender"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/gender"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignEnd="@+id/age" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n"
        android:id="@+id/radioButton3"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/gender"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/age"
        android:typeface="serif"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/gender"
        android:layout_marginTop="60dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*Has heart disease history"
        android:id="@+id/textView8"
        android:layout_marginTop="69dp"
        android:typeface="serif"
        android:textColor="@color/blue800"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="With history"
        android:id="@+id/radioButton4"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/textView8" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No history"
        android:id="@+id/radioButton5"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_alignTop="@+id/radioButton4"
        android:layout_toEndOf="@+id/age" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="center"
        android:background="#4dffebb8"
        android:editable="true"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:id="@+id/textView9"
        android:textColor="@color/blue800"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="      DONE      "
        android:id="@+id/medical_done"
        android:background="@color/blue900"
        android:textColor="@color/blue50"
        android:textSize="45sp"
        android:textStyle="bold"
        android:onClick="enjoy"
        android:layout_above="@+id/textView9"
        android:layout_marginBottom="30dp"

        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*Family heart history"
        android:id="@+id/textView4"
        android:layout_marginTop="64dp"
        android:typeface="serif"
        android:textColor="@color/blue800"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_below="@+id/radioButton4"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="With history"
        android:id="@+id/radioButton6"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No history"
        android:id="@+id/radioButton7"
        android:checked="false"
        android:textColor="@color/blue800"
        android:textSize="40sp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/radioButton5" />

</RelativeLayout>
